Change the email address

--- a/index.html
+++ b/index.html
@@ -1201,8 +1201,7 @@
 									<i class="icon-mail"></i>
 								</div>
 								<div class="colorlib-text">
-									<p style="color: springgreen">namhoangpham96@gmail.com</p>
-									<p style="color: springgreen">hnp435@mail.usask.ca</p>
+									<p style="color: springgreen">namhpham96@gmail.com</p>
 								</div>
 							</div>
 
